<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true">

    <ScrollView
        style="@android:style/Widget.Material.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="42dp">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:scrollbars="vertical"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="3dp">


            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_main"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:background="@drawable/gradient_title"
                app:logo="@drawable/icono"
                app:logoDescription="@string/app_subtitle"
                app:subtitle="@string/app_subtitle"
                app:subtitleTextColor="@color/black"
                app:title="@string/app_title2"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Large">

            </androidx.appcompat.widget.Toolbar>

            <Button
                android:id="@+id/button_ordenar"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="75dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ordenar"
                android:gravity="left|center_vertical"
                android:paddingLeft="50dp"
                android:text="@string/TextoOrdenar"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <Button
                android:id="@+id/button_mapa"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="190dp"
                android:layout_marginTop="75dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/pin"
                android:gravity="left|center_vertical"
                android:paddingLeft="50dp"
                android:text="@string/TextoMapa"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/BSitioHistorico1"
                android:layout_width="181dp"
                android:layout_height="164dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="128dp"
                android:background="@drawable/corners"
                android:contentDescription=" "
                android:scaleType="center"
                android:src="@drawable/caletaolivia" />


            <TextView
                android:id="@+id/TSitioHistorico1_A"
                android:layout_width="197dp"
                android:layout_height="70dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="150dp"
                android:backgroundTint="@color/white"
                android:cursorVisible="false"
                android:duplicateParentState="false"
                android:focusable="false"
                android:fontFamily="@font/helveticaneuemedium"
                android:importantForAccessibility="no"
                android:letterSpacing="0.02"
                android:text="@string/TextoSitioH1_A"

                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TSitioHistorico1_B"
                android:layout_width="140dp"
                android:layout_height="32dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="210dp"
                android:backgroundTint="@color/white"
                android:cursorVisible="false"
                android:drawableStart="@drawable/pin"
                android:duplicateParentState="false"
                android:focusable="false"
                android:fontFamily="@font/helveticaneubold"
                android:importantForAccessibility="no"
                android:letterSpacing="0.02"
                android:text="@string/TextoSitioH1_C"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/BSitioHistorico2"
                android:layout_width="181dp"
                android:layout_height="164dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="320dp"
                android:background="@drawable/corners"
                android:contentDescription=" "
                android:scaleType="centerInside"
                android:src="@drawable/casatipica" />


            <TextView
                android:id="@+id/TSitioHistorico2_B"
                android:layout_width="140dp"
                android:layout_height="32dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="400dp"
                android:drawableStart="@drawable/pin"
                android:fontFamily="@font/helveticaneubold"
                android:letterSpacing="0.02"
                android:text="@string/TextoSitioH2_C"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TSitioHistorico2_A"
                android:layout_width="197dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="340dp"
                android:fontFamily="@font/helveticaneuemedium"
                android:letterSpacing="0.02"
                android:text="@string/TextoSitioH2_A"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/BSitioHistorico3"
                android:layout_width="181dp"
                android:layout_height="164dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="520dp"
                android:background="@drawable/corners"
                android:contentDescription=" "
                android:radius="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/almacenalvarez" />


            <TextView
                android:id="@+id/TSitioHistorico3_A"
                android:layout_width="197dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="550dp"
                android:text="@string/TextoSitioH3_A"
                android:textAlignment="textStart"
                android:letterSpacing="0.02"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                />


            <TextView
                android:id="@+id/TSitioHistorico3_B"
                android:layout_width="140dp"
                android:layout_height="32dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="610dp"
                android:drawableStart="@drawable/pin"
                android:fontFamily="@font/helveticaneubold"
                android:letterSpacing="0.02"
                android:text="@string/TextoSitioH2_C"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/BSitioHistorico4"
                android:layout_width="181dp"
                android:layout_height="164dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="720dp"
                android:background="@drawable/corners"
                android:contentDescription=" "
                android:radius="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/casaromberg" />


            <TextView
                android:id="@+id/TSitioHistorico4_A"
                android:layout_width="200dp"
                android:layout_height="90dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="740dp"
                android:letterSpacing="0.02"
                android:text="@string/TextoSitioH4_A"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:fontFamily="@font/helveticaneubold"
                />

            <TextView
                android:id="@+id/TSitioHistorico4_B"
                android:layout_width="140dp"
                android:layout_height="32dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="840dp"
                android:drawableStart="@drawable/pin"
                android:fontFamily="@font/helveticaneubold"
                android:textColor="@color/black"
                android:text="@string/TextoSitioH4_C"
                android:textAlignment="textStart"
                android:letterSpacing="0.02"
                android:textSize="18sp"
                />


            <ImageButton
                android:id="@+id/BSitioHistorico5"
                android:layout_width="181dp"
                android:layout_height="164dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="910dp"
                android:background="@drawable/corners"
                android:contentDescription=" "
                android:radius="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/primeros_egresados_esc_14" />

            <TextView
                android:id="@+id/TSitioHistorico5_A"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="940dp"
                android:text="@string/TextoSitioH5_A"
                android:textAlignment="textStart"
                android:letterSpacing="0.02"
                android:textColor="@color/black"
                android:fontFamily="@font/helveticaneubold"
                android:textSize="24sp"
                />


            <TextView
                android:id="@+id/TSitioHistorico5_B"
                android:layout_width="140dp"
                android:layout_height="32dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="1040dp"
                android:drawableStart="@drawable/pin"
                android:fontFamily="@font/helveticaneubold"
                android:textColor="@color/black"
                android:text="@string/TextoSitioH2_C"
                android:textAlignment="textStart"
                android:letterSpacing="0.02"
                android:textSize="18sp"
                />


            <ImageButton
                android:id="@+id/BSitioHistorico6"
                android:layout_width="181dp"
                android:layout_height="164dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1100dp"
                android:background="@drawable/corners"
                android:contentDescription=" "
                android:radius="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/bar_boliche_de_berezowsky" />

            <TextView
                android:id="@+id/TSitioHistorico6_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="1120dp"
                android:text="@string/TextoSitioH6_A"
                android:textAlignment="textStart"
                android:textSize="22sp"
                android:letterSpacing="0.02"
                android:fontFamily="@font/helveticaneubold"
                android:textColor="@color/black"
                />


            <TextView
                android:id="@+id/TSitioHistorico6_B"
                android:layout_width="140dp"
                android:layout_height="32dp"
                android:layout_marginStart="210dp"
                android:layout_marginTop="1240dp"
                android:drawableStart="@drawable/pin"
                android:fontFamily="@font/helveticaneubold"
                android:text="@string/TextoSitioH6_C"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:letterSpacing="0.02"
                android:textColor="@color/black"
                />


        </FrameLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>